fix(entities): single source defaulting to EDS for inherent time filter